// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageFlow Snapshots renders a user message and matches snapshot (Req 1.1) 1`] = `
<View
  accessibilityLabel="You: What is the meaning of life?"
  accessibilityRole="text"
  style={
    {
      "marginBottom": 26,
      "paddingHorizontal": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 7,
            "height": 23,
            "marginRight": 8,
            "width": 23,
          },
          {
            "backgroundColor": "#E5E5EA",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#636366",
          },
        ]
      }
    >
      You
    </Text>
  </View>
  <View
    style={{}}
  >
    <Text
      selectable={true}
      style={
        {
          "color": "#1C1C1E",
          "fontSize": 15,
          "lineHeight": 22,
        }
      }
    >
      What is the meaning of life?
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 8,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Copy message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Copy
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Edit message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Edit
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Delete message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageFlow Snapshots renders a user message with token metadata and matches snapshot 1`] = `
<View
  accessibilityLabel="You: Explain quantum computing."
  accessibilityRole="text"
  style={
    {
      "marginBottom": 26,
      "paddingHorizontal": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 7,
            "height": 23,
            "marginRight": 8,
            "width": 23,
          },
          {
            "backgroundColor": "#E5E5EA",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#636366",
          },
        ]
      }
    >
      You
    </Text>
  </View>
  <View
    style={{}}
  >
    <Text
      selectable={true}
      style={
        {
          "color": "#1C1C1E",
          "fontSize": 15,
          "lineHeight": 22,
        }
      }
    >
      Explain quantum computing.
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 8,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Copy message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Copy
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Edit message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Edit
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Delete message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageFlow Snapshots renders an assistant message and matches snapshot (Req 1.2) 1`] = `
<View
  accessibilityLabel="Claude 3.5 Sonnet: The meaning of life is a philosophical question that has been debated for centuries."
  accessibilityRole="text"
  style={
    {
      "marginBottom": 26,
      "paddingHorizontal": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 7,
            "height": 23,
            "marginRight": 8,
            "width": 23,
          },
          {
            "backgroundColor": "#5856D624",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#5856D6",
          },
        ]
      }
    >
      Claude 3.5 Sonnet
    </Text>
  </View>
  <View
    style={{}}
  >
    <Text>
      The meaning of life is a philosophical question that has been debated for centuries.
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 8,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Copy message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Copy
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Regenerate response"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Regenerate
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Delete message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageFlow Snapshots renders an assistant message while streaming (no action buttons) 1`] = `
<View
  accessibilityLabel="GPT-4o: Generating response..."
  accessibilityRole="text"
  style={
    {
      "marginBottom": 26,
      "paddingHorizontal": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 7,
            "height": 23,
            "marginRight": 8,
            "width": 23,
          },
          {
            "backgroundColor": "#5856D624",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#5856D6",
          },
        ]
      }
    >
      GPT-4o
    </Text>
  </View>
  <View
    style={{}}
  >
    <Text>
      Generating response...
    </Text>
  </View>
</View>
`;

exports[`MessageFlow Snapshots renders an assistant message with token metadata and cost 1`] = `
<View
  accessibilityLabel="GPT-4o: Quantum computing leverages quantum mechanical phenomena."
  accessibilityRole="text"
  style={
    {
      "marginBottom": 26,
      "paddingHorizontal": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 7,
            "height": 23,
            "marginRight": 8,
            "width": 23,
          },
          {
            "backgroundColor": "#5856D624",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#5856D6",
          },
        ]
      }
    >
      GPT-4o
    </Text>
    <Text
      style={
        {
          "color": "#8E8E93",
          "fontFamily": "Menlo",
          "fontSize": 11,
          "fontWeight": "400",
          "marginLeft": "auto",
        }
      }
    >
      1.5k in / 3.2k out · $0.047
    </Text>
  </View>
  <View
    style={{}}
  >
    <Text>
      Quantum computing leverages quantum mechanical phenomena.
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 8,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Copy message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Copy
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Regenerate response"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Regenerate
        </Text>
      </View>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityLabel="Delete message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "500",
              },
              {
                "color": "#8E8E93",
              },
            ]
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;
